Add client-side prediction and fix a fixed-timestep force-halving bug
Client now runs its own local Box2D body for its own ship, applying input
immediately via ShipControlSystem.applyInput (the same static method the
server calls) rather than waiting on a round trip, then reconciling against
each WorldSnapshotMessage - a small blend for small errors, a hard snap
(position, angle, and velocity) for large ones. Other players' ships are
unchanged: pure snapshot interpolation, no prediction.

Also fixes a real bug found via play-testing, not tuning: the server ticks
at 30Hz but physics steps at a fixed 60Hz, so most ticks need two physics
steps, and Box2D clears a body's applied forces after every step. Input was
only being reapplied once per tick, so the second step of nearly every tick
got no force at all - roughly halving effective thrust/turn torque, which
read as "flying in slow motion" and, via reconciliation constantly fighting
that speed gap, as jitter on the locally-predicted ship specifically.
PhysicsSystem now takes an update(deltaTime, beforeEachStep) overload that
reapplies input before every individual step, used by both the server and
the client's local prediction.

Ship handling (ShipStats.XWING) retuned by feel afterwards - thrust 30N/
torque 22.5 N*m up to 200N/150 N*m - for a more agile feel suited to the
larger 1920x1080 view.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01P7uRgCR7PmeDNfBYAA3YJd